--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1> Mern 11 mod 7 git desktop </h1>
-    <p> this was changed after git installation.</p>
+    <p> this was changed after git.</p>
+    <h3> Change changes</h3>
     <h2> More changes</h2>
 </body>
 </html>
