--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1> Mern 11 mod 7 git desktop </h1>
     <p> this was changed after git.</p>
     <h3> Change changes</h3>
-    <h2> More changes</h2>
+    <h2> Changes are coming</h2>
 </body>
 </html>
